--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                   <span class="card-title"><a href="https://www.uietkuk.ac.in/" target="_blank" class="teal-text hoverline">University Institute of Engineering and Technology, Kurukshetra
                       University</a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Kurukshetra, India</p>
                 <p>
                   <b>Degree: </b>Bachelor of Technology in Electronics and Communication Engineering
                   <br>
