--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="passport-new.png" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="https://tarun-coder993.github.io/taruns-portfolio.github.io/me.png" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
