--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="https://media-exp1.licdn.com/dms/image/C4D03AQH_D8IET7_3Ng/profile-displayphoto-shrink_400_400/0/1660051351702?e=1667433600&v=beta&t=xaDJnEtVwhYn4eHUlOgYO7e6ioeGyUUHQlHrvoPoqbE" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="https://media.licdn.com/dms/image/C4D03AQH_D8IET7_3Ng/profile-displayphoto-shrink_400_400/0/1660051351702?e=1677110400&v=beta&t=Wk8E15neIG2n2yogY5zMS9HKbA_6SDdfVtRYPIBsJeU" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
