--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="https://media.licdn.com/dms/image/D4D03AQHB1KfT1yZkfg/profile-displayphoto-shrink_400_400/0/1690286996676?e=1695859200&v=beta&t=wGdghSCWBjd4T3aZp30NaNCbtP0rqqz6HegZ8U869EY">
+          <img src="self.jpg">
         </a>
       </li>
 
