--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="self.jpg">
+          <img src="https://media.licdn.com/dms/image/D4D03AQHB1KfT1yZkfg/profile-displayphoto-shrink_400_400/0/1690286996676?e=1695859200&v=beta&t=wGdghSCWBjd4T3aZp30NaNCbtP0rqqz6HegZ8U869EY">
         </a>
       </li>
 
@@ -123,7 +123,7 @@
 
       <li class="bold">
        
-        <a aria-label="Open Tarun's resume in a new tab" href="#" target="_blank"
+        <a aria-label="Open Tarun's resume in a new tab" href="https://drive.google.com/file/d/1A246DrcfDruNhGNFRmRBxmmYUU8GZFXO/view?usp=drive_link" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
