--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="style.css" />
   <title>Tarun Sharma | Software Developer</title>
 
-  
+  <link rel="icon" type="image/x-icon" href="self.jpg">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
